# radio-drama-creator

./: .dockerignore  .gitignore  Dockerfile  PRIORITIES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mlx-biblical-drama-guide.md
examples/: config.json  sample_source.txt
output_exports_check/: cue_sheet.csv  episode_outline.md  production_manifest.json  script.txt  subtitles.srt
output_model_stack_check/: cue_sheet.csv  episode_outline.md  production_manifest.json  subtitles.srt
output_script_direct/: production_manifest.json  script.txt
src/radio_drama_creator/: __init__.py  analyze.py  book_extraction.py  casting.py  character_identification.py  cli.py  config.py  dramatize.py  emotion_tts.py  emotions.py  exports.py  gui.py  ingest.py  kokoro_renderer.py  metadata.py  mlx_registry.py  model_manager.py  models.py  pipeline.py  plugins.py  protagonist.py  render.py  sfx.py  sound_effects.py
src/radio_drama_creator/utils/: __init__.py  audio_utils.py  file_utils.py  health_check.py  shell_utils.py
src/radio_drama_creator/web/: __init__.py  app.py  serve.py
src/radio_drama_creator/web/templates/: catalog.html  finetune.html  index.html  models.html
tests/: conftest.py  test_analyze.py  test_book_extraction.py  test_character_identification.py  test_config.py  test_dramatize.py  test_emotion_tts.py  test_emotions.py  test_exports.py  test_finetune.py  test_gui.py  test_gui_features.py  test_ingest.py  test_integration.py  test_kokoro_renderer.py  test_model_manager.py  test_models.py  test_plugins.py  test_render_features.py  test_sfx.py  test_sound_effects.py  test_utils.py  test_web_app.py
