[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-drama-creator"
version = "0.1.0"
description = "Turn local documents into golden-age style radio dramas on Apple Silicon Macs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Timothy Hartzog" }
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
mlx = ["mlx-lm>=0.20.0", "mlx-vlm>=0.1.17", "mlx-audio>=0.1.0"]

[project.scripts]
radio-drama = "radio_drama_creator.cli:main"
radio-drama-gui = "radio_drama_creator.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
