[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-drama-creator"
version = "0.1.0"
description = "Turn local documents into golden-age style radio dramas on Apple Silicon Macs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Timothy Hartzog" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0"]
mlx = ["mlx-lm>=0.20.0", "mlx-vlm>=0.1.17", "mlx-audio>=0.1.0"]
epub = ["ebooklib>=0.18"]
nlp = ["spacy>=3.7.0", "openai>=1.0.0"]
textract = ["textract>=1.6.5"]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]
all = [
    "radio-drama-creator[pdf,mlx,epub,nlp,web]",
]

[project.scripts]
radio-drama = "radio_drama_creator.cli:main"
radio-drama-gui = "radio_drama_creator.gui:main"
radio-drama-web = "radio_drama_creator.web.serve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
